# plugo

./: .gitignore  README.md  app.py  plugin_manager.py  pyproject.toml  test.py
.github/workflows/: publish.yml
src/plugo/cli/: main.py  new_api_plugin.py
src/plugo/cli/cookiecutter-api-plugin/{{cookiecutter.plugin_slug}}/: metadata.json  plugin.py
src/plugo/cli/cookiecutter-base-plugin/{{cookiecutter.plugin_slug}}/: plugin.py
src/plugo/cli/cookiecutter-ui-plugin/{{cookiecutter.plugin_slug}}/: plugin.py
src/plugo/cli/cookiecutter-ui-plugin/{{cookiecutter.plugin_slug}}/templates/: create.html  edit.html  index.html
src/plugo/examples/flask_base_plugins/: app.py
src/plugo/services/: consolidate_plugin_requirements.py  plugin_manager.py  plugin_watcher.py  venv_manager.py
src/plugo/tests/services/: test_cli_main.py  test_plugin_dependencies.py  test_plugin_manager.py
