[tool.poetry]
name = "plugin-test"
version = "0.1.0"
description = ""
authors = ["Ryan Julyan <ryan@julyan.biz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
setuptools = "^75.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
